iptables
# Generated by iptables-save v1.4.21 on Wed Oct 18 22:38:08 2017
*nat
:PREROUTING ACCEPT [13647:755241]
:INPUT ACCEPT [10437:563700]
:OUTPUT ACCEPT [9397:635064]
:POSTROUTING ACCEPT [1208:84072]
COMMIT
# Completed on Wed Oct 18 22:38:08 2017
# Generated by iptables-save v1.4.21 on Wed Oct 18 22:38:08 2017
*filter
:INPUT DROP [6:456]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [6689:5165683]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80,443 -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m recent --rcheck --seconds 60 --hitcount 20 --name webpool --mask 255.255.255.255 --rsource -j LOG --log-prefix "DDOS:" --log-ip-options
-A INPUT -p tcp -m multiport --dports 80,443 -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m recent --rcheck --seconds 60 --hitcount 20 --name webpool --mask 255.255.255.255 --rsource -j DROP
-A INPUT -p tcp -m multiport --dports 80,443 -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m recent --set --name webpool --mask 255.255.255.255 --rsource -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9527 --tcp-flags FIN,SYN,RST,ACK SYN -j LOG --log-prefix "WEBOPEN: "
-A INPUT -p tcp -m tcp --dport 9527 --tcp-flags FIN,SYN,RST,ACK SYN -m recent --remove --name webpool --mask 255.255.255.255 --rsource -j REJECT --reject-with tcp-reset
-A INPUT -p tcp -m multiport --dports 21,22,80,443 -m state --state NEW -j ACCEPT
COMMIT
# Completed on Wed Oct 18 22:38:08 2017
